--- a/index.html
+++ b/index.html
@@ -1,21 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tariq's Portfolio</title>
-</head>
-<body>
-  <h1>Tariq Rahman's Portfolio</h1>
-  <h2>I am a Digital Creator ;)</h2>
-  <hr />
-    <a href="./public/movie-rank.html"><h3>Movie Ranking Project</h3></a>
-    <img src="./assets/images/movie-ranking.png" height="400"/>
-    <a href="./public/birthday-inv.html"><h3>Birthday Invite Project</h3></a>
-    <img src="./assets/images/birthday-invite.png" height="400"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Project</title>
+  </head>
+  <body>
+    <h1>Tariq Rahman</h1>
+    <img src="./assets/images/me.jpg" height="200" />
+    <h2>Summary</h2>
+    <p>
+      Hi thanks for reading! I am an aspiring entry level web developer looking
+      to start a career in web development and data analysis.
+    </p>
+    <p>
+      Having started out with 
+      an educational background in Software Engineering 
+      with Java I quickly fell in love with the simplicity of python and javascript and 
+      decided to pursue a career in creating beautiful and functional web applications!
+    </p>
+      <p>If I had one super power it would be my ability to learn and pick up things quickly evidenced by how fast I finished my bootcamp and started doing projects.
+      <p>I look forward to working with you to bring your website to the forefront of the world in the best and most beautiful way possible!</p>
+    </p>
     
-  <hr />
-  <a href="./public/about.html">About Me</a> <br />
-  <a href="./public/contact.html">Contact</a>
-</body>
+    <hr />
+    <h2>Education</h2>
+    <strong><p>Associates of Science in Computer Science</p></strong>
+    <p>Houston Community College (2018 - 2020)</p>
+    <hr />
+    <h2>Work</h2>
+    <!-- Add Freelance Work Experience here and make sure I back it up by working on a lot
+      of projects in the interim
+      
+      1. Website for the Dhaka Press Club
+      2. Website for DOHA Associates
+      3. Website for Mushfique's Company
+      4. Website for Bappa's NGO
+    -->
+    <hr />
+    <h2>Experience</h2>
+    <hr />
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+    </ul>
+    <hr />
+    <h2>Certifications</h2>
+    <hr />
+    <footer>
+      <a href="./public/hobbies.html">My Hobbies</a>
+      <a href="./public/contact.html">Contact Me</a><br />
+      <small>
+        Copyright © Tariq Rahman. All rights reserved.
+      </small>
+    </footer>
+  </body>
 </html>
