--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,20 @@
-<h1>Contact Me</h1>
-<p>Tel: +(281) 406 1130</p>
-<p>Email: tariqrahman222@gmail.com</p>
-<p>Address:</p>
-<p>
-  123/KA Pisciculture Housing Society, Shyamoli<br />
-  Dhaka<br />
-  Bangladesh <br />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tariq's Contact Info</title>
+  </head>
+  <body>
+    <h1>Contact Me</h1>
+    <strong>Phone</strong>
+    <p>(281) 406-1130</p>
+    <strong>Email Address</strong>
+    <p>tariqrahman222@gmail.com</p>
+    <strong>Physical Address</strong>
+    <p>123/KA Pisciculture Housing Society</p>
+    <p>Shyamoli, Mohammadpur</p>
+    <p>Dhaka-1207</p>
+    <p>Bangladesh &#x1F1E7;&#x1F1E9;</p>
+  </body>
+</html>
